---
source: crates/jmdict/tests/it/jmdict.rs
assertion_line: 157
expression: result
---
entries:
  - id: 1580500
    kanjis:
      - kanji: 剰え
        info:
          - rareKanjiForm
        priority: []
      - kanji: 剰
        info:
          - irregularOkurigana
          - rareKanjiForm
        priority: []
    readings:
      - reading: あまつさえ
        nokanji: false
        to_form: []
        info: []
        priority: []
      - reading: あまっさえ
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - adverb
        misc:
          - usuallyKanaAlone
        info:
          - usu. negative nuance
        dialects: []
        meanings:
          - besides
          - moreover
          - in addition
  - id: 9999999
    kanjis:
      - kanji: ＪＭｄｉｃｔ
        info: []
        priority: []
    readings:
      - reading: ジェイエムディクト
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - unclassified
        misc: []
        info: []
        dialects: []
        meanings:
          - "Japanese-Multilingual Dictionary Project - Creation Date: 2024-08-23"
creation_date: 2024-08-23
